--- a/Hosts-For-AWX.yml
+++ b/Hosts-For-AWX.yml
@@ -4,7 +4,7 @@
     tasks:
       - name: Provision CentOS7
         ec2:
-          aws_region: ap-northeast-1a
+          aws_region: ap-northeast-1
           instance_type: t2.micro
           image: ami-045f38c93733dd48d
           count: 1
@@ -15,7 +15,7 @@
           
       - name: Provision Ubuntu 16.04 LTS
         ec2:
-          aws_region: ap-northeast-1a
+          aws_region: ap-northeast-1
           instance_type: t2.micro
           image: ami-02794be3fb6de50e1
           count: 1
@@ -30,7 +30,7 @@
 
       - name: Provision Debian GNU-Linux8
         ec2:
-          aws_region: ap-northeast-1a
+          aws_region: ap-northeast-1
           instance_type: t2.micro
           image: ami-0e39dfb1283d1154e
           count: 1
@@ -41,7 +41,7 @@
 
       - name: Provision Windows 2016
         ec2:
-          aws_region: ap-northeast-1a
+          aws_region: ap-northeast-1
           instance_type: t2.micro
           image: ami-0227ec37bb20fc66f
           count: 1
