--- a/ticketos10.yml
+++ b/ticketos10.yml
@@ -3,22 +3,18 @@
   become: yes
   become_method: sudo
   tasks:
-    - name: Install a list of packages on centos
-      yum:
-        name:
-          - vim 
-          - tree 
-          - telnet 
-        state=present
-#      when: ansible_distribution == "CentOS"
-    - name: Install a list of packages on debian and ubuntu
-      apt:
-        name:
-          - tree 
-          - vim 
-          - telnet 
-        state=present     
-#      when: 
-#        - ansible_distribution == "Ubuntu"
-#        - ansible_distribution == "CentOS"
-#        - ansible_distribution == "Debian"
+  - name: Install a list of packages on centos
+    yum:
+      name:
+        - vim 
+        - tree 
+        - telnet 
+      state=present:
+  - name: Install a list of packages on debian and ubuntu
+    apt:
+      name:
+        - tree 
+        - vim 
+        - telnet 
+      state=present:
+  when: ansible_distribution == 'CentOS' and ansible_distribution == 'Debian' and ansible_distribution == 'Ubuntu'
