--- a/wordpress.yml
+++ b/wordpress.yml
@@ -7,8 +7,8 @@
       get_url:
         url: https://wordpress.org/latest.tar.gz
         dest: /tmp
-    - name: Unarchive a file that needs to be downloaded (added in 2.0)
+    - name: Unarchive wordpress
       unarchive:
-        src: /tmp/wordpress-5.1.1.tar
+        src: /tmp/wordpress-5.1.1.tar.gz
         dest: /tmp
-        remote_src: yes
+        remote_src: true
