--- a/ticketos10.yml
+++ b/ticketos10.yml
@@ -10,6 +10,7 @@
         - tree 
         - telnet 
       state: present
+    when: ansible_distribution == 'CentOS7'
   - name: Install a list of packages on debian and ubuntu
     apt:
       name:
@@ -17,4 +18,4 @@
         - vim 
         - telnet 
       state: present
-#  when: ansible_distribution == 'CentOS' and ansible_distribution == 'Debian' and ansible_distribution == 'Ubuntu'
+    when: ansible_distribution == 'Debian9' and ansible_distribution == 'Ubuntu16'
