--- a/ticket11/start package.yml
+++ b/ticket11/start package.yml
@@ -4,7 +4,7 @@
   become_method: sudo
   tasks: 
     - name: Install and start apache webserver on CentOS
-      when: ansible_distribution == CentOS
+      when: ansible_distribution == 'CentOS'
       yum:
         name: httpd
         state: present 
