--- a/ticket11/start package.yml
+++ b/ticket11/start package.yml
@@ -17,21 +17,21 @@
     - name: Install and start apache webserver on Debian
       when: ansible_distribution == 'Debian'
       apt:
-        name: httpd
+        name: apache2
         state: present 
     - name: Start apache web server
       service:
-        name: httpd
+        name: apache2
         state: started
         enabled: yes
     
     - name: Install and start apache webserver on Ubuntu
       when: ansible_distribution == 'Ubuntu'
       apt:
-        name: httpd
+        name: apache2
         state: present 
     - name: Start apache web server
       service:
-        name: httpd
+        name: apache2
         state: started
         enabled: yes
